--- a/web/example.html
+++ b/web/example.html
@@ -3,7 +3,7 @@
         <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
         <script src="./privlytics.js" type="text/javascript"></script>
         <script>
-            privlytics();
+            privlytics('DEV_SITE');
         </script>
     </body>
 </html>
